--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Hello World. My name is Tony!</h1>
-
+<div class="jumbotron">
+<h1>STUKDO</h1>
+<p>This is my smart to-do list Ruby 0n Rails Application</p>
+<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+</div>
