--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-<h1>STUKDO</h1>
+<h1><i class="fa fa-circle-o-notch"></i> STUKDO</h1>
 <p>This is my smart to-do list Ruby 0n Rails Application</p>
 <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
 </div>
